<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03D4CE"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <Button
        android:id="@+id/button"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#C927B0"
        android:text="@string/music_list" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/change_icon" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        app:srcCompat="@drawable/cd_grayscale" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/concert_one"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#9C27B0"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/notes"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="VolumeHangerő: 20"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="Hangerő: 20" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="20" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#C927B0"
        android:text="@string/play" />
</LinearLayout>